<?xml version="1.0"?>
<package format="2">
  <name>pablowsky_teleop</name>
  <version>0.0.0</version>
  <description>The pablowsky_teleop package</description>

  <maintainer email="olima_84@yahoo.com">Oscar Lima</maintainer>

  <license>BSD</license>

  <!--   <build_depend>roscpp</build_depend> -->
  <exec_depend>spacenav_node</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

</package>
